--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+@font-face {
+  font-family: "Gilroy-Regular";
+  src: url("/fonts/Gilroy-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Gilroy-Bold";
+  src: url("/fonts/Gilroy-Bold.woff") format("woff");
+}
+
+html {
+  font-size: 62.5%;
+}
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Gilroy-Regular", Helvetica,
+    Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+:root {
+  --c-black: #000;
+  --c-white: #fff;
+  --c-border: #d4d4d4;
+  --c-pink: #f8e0dc;
+  --c-secondary: #f7f7f7;
+  --c-dark: #181818;
+  --c-basic: #2b2b2b;
+  --c-active: #d0ebd8;
+  --c-light: #f4dcc1;
+  --s-radius: 30px;
 }
