--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,8 @@ body {
   --c-basic: #2b2b2b;
   --c-active: #d0ebd8;
   --c-light: #f4dcc1;
-  --o-secondary: rgb(247, 247, 247, 0.5);
+  --o-secondary: rgba(245, 245, 245, 0.15);
+  --o-glass: rgba(245, 245, 245, 0.8);
   --s-radius: 30px;
   --s-ellipse: 50px;
 }
