--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -40,44 +40,13 @@
   justify-content: space-between;
 }
 
-.glass-card {
-  border-radius: var(--s-radius);
-  font-size: 2rem;
-  overflow: hidden;
-  position: relative;
-  margin-right: 1rem;
-}
-
-.glass-card:before {
-  content: "";
-  height: 100%;
-  position: absolute;
-  width: 100%;
-  background-color: rgba(245, 245, 245, 0.8);
-  background-blend-mode: hard-light;
-  box-shadow: inset 0px 1px 3px rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(81.5485px);
-}
-
-.glass-text {
-  margin: 2rem 2rem 0;
-  position: relative;
-  z-index: 2;
-}
-
-.glass-bot {
-  margin: 0 2rem 2rem;
-  position: relative;
-  z-index: 2;
-}
-
 .btn {
   padding: 2rem;
   border: 0;
   border-radius: var(--s-radius);
   font-weight: bold;
   font-size: 1.6rem;
-  background-color: var(--o-secondary);
+  background-color: var(--o-glass);
   backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
 }
 
@@ -100,51 +69,13 @@
 }
 
 .dock {
-  border: 0.25px solid rgba(245, 245, 245, 0.15);
+  border: 0.25px solid var(--o-secondary);
   border-radius: 2rem;
-  background: rgba(245, 245, 245, 0.15);
+  background: var(--o-secondary);
   background-blend-mode: luminosity;
   backdrop-filter: blur(81.5485px);
   padding: 1rem 1rem 1.2rem;
   list-style-type: none;
-}
-
-.superellipse {
-  width: var(--s-ellipse);
-  height: var(--s-ellipse);
-  position: relative;
-  border-radius: 20%;
-  background-color: rgba(245, 245, 245, 0.8);
-  transition: transform 0.3s;
-}
-
-.superellipse:hover {
-  transform: translateY(-1rem) scale(2);
-}
-
-.superellipse::before,
-.superellipse::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-}
-
-‍.superellipse::before {
-  border-radius: 2%/30%;
-  background-color: inherit;
-  top: var(--s-ellipse) / 7;
-  bottom: var(--s-ellipse) / 7;
-  right: var(--s-ellipse) / -110;
-  left: var(--s-ellipse) / -110;
-}
-
-.superellipse::after {
-  border-radius: 30%/2%;
-  background-color: inherit;
-  top: var(--s-ellipse) / -110;
-  bottom: var(--s-ellipse) / -110;
-  right: var(--s-ellipse) / 7;
-  left: var(--s-ellipse) / 7;
 }
 
 @keyframes slide {
