--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,8 +1,3 @@
-.app {
-  min-height: 100vh;
-  color: var(--c-black);
-}
-
 .home-page {
   background-color: var(--c-pink);
   height: 100vh;
@@ -14,13 +9,18 @@
   border-radius: var(--s-radius);
   font-weight: bold;
   font-size: 1.6rem;
-  background-color: var(--o-glass);
-  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
+  transition: background-color 0.2s;
+  cursor: pointer;
 }
 
 .link {
   text-decoration: none;
   color: inherit;
+  transition: filter 0.2s;
+}
+
+.link:hover {
+  filter: drop-shadow(0px 20px 30px rgba(0, 0, 0, 0.2));
 }
 
 .arrow-right {
@@ -43,15 +43,28 @@
   background-blend-mode: luminosity;
   backdrop-filter: blur(81.5485px);
   padding: 1rem 1rem 1.2rem;
+  animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
 
 @keyframes slide {
   0%,
   100% {
-    transform: translate(-15px, 0);
+    transform: translateX(-15px);
   }
 
   50% {
-    transform: translate(-30px, 0);
+    transform: translateX(-30px);
+  }
+}
+
+@keyframes toast-enter {
+  0% {
+    opacity: 0.01;
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
   }
 }
