--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -23,12 +23,21 @@
   filter: drop-shadow(0px 20px 30px rgba(0, 0, 0, 0.2));
 }
 
-.arrow-right {
-  border: solid var(--c-black);
+.arrow {
+  border-style: solid;
   border-width: 0 2px 2px 0;
   display: inline-block;
   padding: 3px;
+}
+
+.arrow-left {
+  border-color: var(--c-black);
   transform: rotate(135deg);
+}
+
+.arrow-right {
+  border-color: var(--c-white);
+  transform: rotate(-45deg);
 }
 
 .slide {
@@ -44,6 +53,15 @@
   backdrop-filter: blur(81.5485px);
   padding: 1rem 1rem 1.2rem;
   animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
+}
+
+.stage {
+  margin-bottom: 4.4rem;
+}
+
+.stage-title {
+  font-size: 1.8rem;
+  margin-left: 1.8rem;
 }
 
 @keyframes slide {
