--- a/src/components/Superellipse/SuperEllipse.css
+++ b/src/components/Superellipse/SuperEllipse.css
@@ -4,7 +4,7 @@
   position: relative;
   border-radius: 25%;
   font-size: 1rem;
-  transition: transform 0.3s;
+  transition: transform 0.4s var(--a-press);
 }
 
 .superellipse:hover {
