--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,26 +1,24 @@
-.home-page {
-  background-color: var(--c-pink);
-  height: 100vh;
-}
-
 .btn {
   padding: var(--s-medium);
   border: 0;
   border-radius: var(--s-radius);
   font-weight: bold;
   font-size: 1.6rem;
-  transition: background-color 0.2s;
+  transition: filter 0.25s, transform 0.4s var(--a-press);
   cursor: pointer;
+}
+
+.btn:active {
+  transform: scale(0.94);
+}
+
+.btn:hover {
+  filter: var(--p-shadow);
 }
 
 .link {
   text-decoration: none;
   color: inherit;
-  transition: filter 0.2s;
-}
-
-.link:hover {
-  filter: drop-shadow(0px 20px 30px rgba(0, 0, 0, 0.2));
 }
 
 .arrow {
@@ -46,12 +44,13 @@
 }
 
 .dock {
-  border: 0.25px solid var(--o-secondary);
+  max-width: 80rem;
+  margin-bottom: 1rem;
   border-radius: var(--s-medium);
-  background-color: var(--o-secondary);
+  background-color: var(--o-glass);
   background-blend-mode: luminosity;
-  backdrop-filter: blur(81.5485px);
-  padding: 1rem 1rem 1.2rem;
+  backdrop-filter: var(--p-blur);
+  padding: 1.2rem;
   animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
 
