--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,11 +1,3 @@
-.profile-page {
-  background-color: var(--c-light);
-}
-
-.content-full {
-  width: 100%;
-}
-
 .icon {
   width: var(--s-medium);
   min-height: var(--s-medium);
@@ -18,7 +10,7 @@
 
 .card {
   padding: var(--s-medium);
-  background-color: var(--c-secondary);
+  background-color: var(--o-glass);
   border-radius: var(--s-radius);
   margin-bottom: 1.4rem;
 }
@@ -31,8 +23,4 @@
 .card-description {
   color: var(--c-basic);
   font-size: 1.6rem;
-}
-
-.dark-btn:hover {
-  background-color: var(--c-basic);
 }
