--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -87,6 +87,7 @@
 .tour-list li {
   padding: 1rem 1.6rem;
   border-radius: var(--s-medium);
+  text-align: right;
   transition: background-color 0.2s, color 0.2s, transform 0.2s;
 }
 
@@ -98,6 +99,12 @@
   color: var(--c-white);
   background-color: var(--c-dark);
   transform: translateX(0.8rem);
+}
+
+.home-stats {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
 }
 
 @keyframes slide {
@@ -120,5 +127,15 @@
   100% {
     opacity: 1;
     transform: translateY(0%);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .stage {
+    margin-bottom: 3.6rem;
+  }
+
+  .home-stats {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
