--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
-@font-face {
-  font-family: "Gilroy-Regular";
-  src: url("assets/fonts/Gilroy-Regular.woff2") format("woff2");
-  font-display: optional;
-  font-style: normal;
-  unicode-range: U+000-5FF;
-}
-
 html {
   font-size: 62.5%;
 }
@@ -17,7 +9,7 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Gilroy-Regular", Helvetica,
+  font-family: -apple-system, BlinkMacSystemFont, "Inter", Helvetica,
     Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
