--- a/src/index.css
+++ b/src/index.css
@@ -62,11 +62,14 @@ a {
 }
 
 .title {
-  font-size: 4.4rem;
+  font-size: 4.8rem;
+  margin: 2.8rem 0 0;
+  letter-spacing: 0.35px;
 }
 
 .info {
-  line-height: 2rem;
+  line-height: 2.4rem;
+  margin: 1.4rem 0 2rem;
 }
 
 .bar {
@@ -74,7 +77,7 @@ a {
 }
 
 .text {
-  max-width: 42rem;
+  max-width: 62rem;
 }
 
 .items-center {
@@ -99,6 +102,7 @@ a {
 
 .list {
   list-style-type: none;
+  font-size: 1.6rem;
 }
 
 .page {
@@ -131,10 +135,15 @@ a {
 .tour {
   background-color: var(--c-white);
   padding: var(--s-medium);
+  margin-top: var(--s-medium);
 }
 
 @media screen and (max-width: 768px) {
   .page {
     padding: 1.6rem;
+  }
+
+  .title {
+    font-size: 3.4rem;
   }
 }
