--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -44,7 +44,7 @@
 }
 
 .dock {
-  max-width: 80rem;
+  max-width: 58rem;
   border-radius: var(--s-medium);
   background-color: var(--o-glass);
   background-blend-mode: luminosity;
@@ -64,8 +64,8 @@
 
 .line {
   display: block;
-  height: 0.2rem;
-  margin: 0.2rem -0.5rem;
+  height: 0.3rem;
+  margin: 0.3rem 0;
 }
 
 .line:first-child {
