--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -43,6 +43,14 @@
   transition: transform 0.3s;
 }
 
+.fixed-bottom {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  padding: 1.2rem 1rem;
+  animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
+}
+
 .dock {
   max-width: 58rem;
   border-radius: var(--s-medium);
@@ -50,7 +58,6 @@
   background-blend-mode: luminosity;
   backdrop-filter: var(--p-blur);
   padding: 1.6rem;
-  animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
 
 .stage {
@@ -121,12 +128,12 @@
 @keyframes toast-enter {
   0% {
     opacity: 0.01;
-    transform: translateY(100%);
+    transform: translateY(100%) translateX(-50%);
   }
 
   100% {
     opacity: 1;
-    transform: translateY(0%);
+    transform: translateY(0%) translateX(-50%);
   }
 }
 
