--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Inter", Helvetica,
-    Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Inter', Helvetica, Arial,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.4rem;
@@ -26,7 +26,7 @@ a {
 }
 
 :root {
-  --c-black: #1C1C1E;
+  --c-black: #1c1c1e;
   --c-white: #fff;
   --c-dark: rgba(30, 30, 30, 0.75);
   --c-basic: #4e4e4e;
@@ -127,6 +127,21 @@ a {
   font-size: 1.6rem;
 }
 
+.fixed-bottom {
+  position: fixed;
+  bottom: 1.2rem;
+  left: 50%;
+  animation: toast-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
+}
+
+.dock {
+  max-width: 58rem;
+  background-color: var(--o-glass);
+  background-blend-mode: luminosity;
+  backdrop-filter: var(--p-blur);
+  padding: 1.6rem;
+}
+
 @media screen and (max-width: 768px) {
   .page {
     padding: 1.6rem;
@@ -134,5 +149,21 @@ a {
 
   .title {
     font-size: 3.4rem;
+  }
+
+  .dock {
+    max-width: calc(100% - 2rem);
+  }
+}
+
+@keyframes toast-enter {
+  0% {
+    opacity: 0.01;
+    transform: translateY(100%) translateX(-50%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%) translateX(-50%);
   }
 }
