--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,12 @@
 .card {
   background-color: var(--c-white);
-  animation: alert-enter 0.4s ease-in-out;
+  animation: alert-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
   padding: 1.6rem var(--s-medium);
 }
 
 .card-text {
   display: block;
-  font-size: 6.2rem;
+  font-size: 6.4rem;
 }
 
 .card-measure {
