--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   background-color: #c1deba;
   color: var(--c-black);
   min-height: 100vh;
-  padding: 1rem 1rem 10.6rem;
+  padding: 1rem 0.6rem 10.6rem;
 }
 
 a {
@@ -107,11 +107,17 @@ ul {
   border-radius: var(--s-medium);
 }
 
-.page {
+.view {
   padding: var(--s-medium);
-  margin-bottom: 2.4rem;
+}
+
+.page {
   background-color: var(--o-secondary);
   backdrop-filter: var(--p-blur);
+}
+
+.page:not(:last-child) {
+  margin-bottom: 2.4rem;
 }
 
 .fixed-bottom {
@@ -131,12 +137,11 @@ ul {
 
 .layer {
   background-color: var(--c-white);
-  padding: var(--s-medium);
 }
 
 @media screen and (max-width: 768px) {
-  .page {
-    padding: 1.6rem;
+  .view {
+    padding: 1.6rem 1.4rem;
   }
 
   .title {
@@ -144,7 +149,11 @@ ul {
   }
 
   .dock {
-    max-width: calc(100% - 2rem);
+    max-width: calc(100% - 1.2rem);
+  }
+
+  .subtitle {
+    font-size: 2.8rem;
   }
 }
 
