--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,12 +1,12 @@
 .card {
   background-color: var(--c-white);
-  animation: alert-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
   padding: 1.6rem var(--s-medium);
 }
 
 .card-text {
   display: block;
   font-size: 6.4rem;
+  animation: alert-enter cubic-bezier(0.155, 1.105, 0.295, 1.12) 0.4s both;
 }
 
 .card-measure {
@@ -20,11 +20,11 @@
 @keyframes alert-enter {
   0% {
     opacity: 0.01;
-    transform: translateY(100%);
+    transform: translateY(5rem);
   }
 
   100% {
     opacity: 1;
-    transform: translateY(0%);
+    transform: translateY(0);
   }
 }
