--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   --c-active: rgba(0, 0, 0, 0.05);
   --c-secondary: rgba(255, 255, 255, 0.5);
   --c-glass: rgba(245, 245, 245, 0.5);
+  --c-primary: #c1deba;
+  --c-info: #e7c4b1;
+  --c-warning: #fbf3eb;
+  --c-contrast: #232526;
+  --c-ring: #0a84ff;
   --s-ellipse: 5rem;
   --s-medium: 2rem;
   --a-press: cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -28,7 +33,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.4rem;
-  background-color: #c1deba;
+  background-color: var(--c-primary);
   color: var(--c-black);
   min-height: 100vh;
   padding: 1rem 0.8rem 10.6rem;
@@ -45,6 +50,10 @@ svg {
 
 ul {
   list-style-type: none;
+}
+
+button {
+  cursor: pointer;
 }
 
 .app {
@@ -152,7 +161,7 @@ ul {
   }
 
   .subtitle {
-    font-size: 2.8rem;
+    font-size: 2rem;
   }
 }
 
