--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -8,7 +8,7 @@
   min-width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: #c1deba;
+  background-color: var(--c-primary);
   margin-right: 2rem;
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
