--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -13,10 +13,24 @@
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
+.form-radio {
+  height: 2.8rem;
+  min-width: 2.8rem;
+}
+
+.form-label {
+  padding-left: 2rem;
+  font-size: 1.6rem;
+}
+
+.theme-list li {
+  margin-bottom: 2rem;
+}
+
 @keyframes ping {
   75%,
   100% {
-    transform: scale(1.8);
-    opacity: 0.5;
+    transform: scale(1.6);
+    opacity: 0.7;
   }
 }
