--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -13,23 +13,33 @@
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
-.form-radio {
-  height: 2.8rem;
-  min-width: 2.8rem;
-  outline-offset: 4px;
+.form-item {
+  padding: 1.2rem;
+  margin-bottom: 0.8rem;
+  cursor: pointer;
 }
 
 .form-label {
-  padding-left: 2rem;
+  padding-left: 1.8rem;
   font-size: 1.6rem;
 }
 
-.theme-list {
-  padding: 1.2rem;
+.form-radio {
+  height: 2.8rem;
+  min-width: 2.8rem;
+  border-width: 6px;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  transition: border 0.2s ease-out;
 }
 
-.theme-list li {
-  margin-bottom: 2rem;
+.form-item:hover .form-radio:not(.radio-checked) {
+  border-color: var(--c-dark);
+}
+
+.form-radio.radio-checked {
+  border-color: #11b826;
 }
 
 .blue-theme {
